# linopy-yaml

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
examples/: dispatch.yaml
linopy_yaml/: __init__.py  accessor.py  builder.py  expression_parser.py  helpers.py  loader.py  model.py  schema.py  where_parser.py
tests/: conftest.py  test_dispatch.py  test_loader.py  test_parser.py  test_schema.py
